# cctv-monitor-stream

./: .env.example  .gitignore  README.md  pyproject.toml
app/hikonek_stream/: __init__.py  ai_engine.py  emailer.py  frame_pipeline.py  hikconnect_client.py  main.py  models.py  settings.py
hikonek_stream.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
